@@ -526,6 +526,9 @@ export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
 export(getBMRFilteredFeatures)
 export(getBMRLearnerIds)
+export(getBMRLearners)
+export(getBMRMeasureIds)
+export(getBMRMeasures)
 export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
