@@ -15,6 +15,9 @@ Other benchmark: \code{\link{benchmark}};
   \code{\link{getBMRFeatSelResults}};
   \code{\link{getBMRFilteredFeatures}};
   \code{\link{getBMRLearnerIds}};
+  \code{\link{getBMRLearners}};
+  \code{\link{getBMRMeasureIds}};
+  \code{\link{getBMRMeasures}};
   \code{\link{getBMRPerformances}};
   \code{\link{getBMRPredictions}};
   \code{\link{getBMRTaskIds}};
