@@ -37,6 +37,9 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{getBMRAggrPerformances}};
   \code{\link{getBMRFilteredFeatures}};
   \code{\link{getBMRLearnerIds}};
+  \code{\link{getBMRLearners}};
+  \code{\link{getBMRMeasureIds}};
+  \code{\link{getBMRMeasures}};
   \code{\link{getBMRPerformances}};
   \code{\link{getBMRPredictions}};
   \code{\link{getBMRTaskIds}};
