@@ -1,20 +1,20 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/BenchmarkResult_operators.R
-\name{getBMRLearnerIds}
-\alias{getBMRLearnerIds}
-\title{Return learner ids used in benchmark.}
+\name{getBMRLearners}
+\alias{getBMRLearners}
+\title{Return learners used in benchmark.}
 \usage{
-getBMRLearnerIds(bmr)
+getBMRLearners(bmr)
 }
 \arguments{
 \item{bmr}{[\code{\link{BenchmarkResult}}]\cr
 Benchmark result.}
 }
 \value{
-[\code{character}].
+[\code{list}].
 }
 \description{
-Return learner ids used in benchmark.
+Return learners used in benchmark.
 }
 \seealso{
 Other benchmark: \code{\link{BenchmarkResult}};
@@ -22,7 +22,7 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{getBMRAggrPerformances}};
   \code{\link{getBMRFeatSelResults}};
   \code{\link{getBMRFilteredFeatures}};
-  \code{\link{getBMRLearners}};
+  \code{\link{getBMRLearnerIds}};
   \code{\link{getBMRMeasureIds}};
   \code{\link{getBMRMeasures}};
   \code{\link{getBMRPerformances}};
