@@ -1,20 +1,20 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/BenchmarkResult_operators.R
-\name{getBMRLearnerIds}
-\alias{getBMRLearnerIds}
-\title{Return learner ids used in benchmark.}
+\name{getBMRMeasureIds}
+\alias{getBMRMeasureIds}
+\title{Return measures used in benchmark.}
 \usage{
-getBMRLearnerIds(bmr)
+getBMRMeasureIds(bmr)
 }
 \arguments{
 \item{bmr}{[\code{\link{BenchmarkResult}}]\cr
 Benchmark result.}
 }
 \value{
-[\code{character}].
+[\code{list}]. See above.
 }
 \description{
-Return learner ids used in benchmark.
+Return measures used in benchmark.
 }
 \seealso{
 Other benchmark: \code{\link{BenchmarkResult}};
@@ -22,8 +22,8 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{getBMRAggrPerformances}};
   \code{\link{getBMRFeatSelResults}};
   \code{\link{getBMRFilteredFeatures}};
+  \code{\link{getBMRLearnerIds}};
   \code{\link{getBMRLearners}};
-  \code{\link{getBMRMeasureIds}};
   \code{\link{getBMRMeasures}};
   \code{\link{getBMRPerformances}};
   \code{\link{getBMRPredictions}};
