@@ -23,6 +23,9 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{getBMRFeatSelResults}};
   \code{\link{getBMRFilteredFeatures}};
   \code{\link{getBMRLearnerIds}};
+  \code{\link{getBMRLearners}};
+  \code{\link{getBMRMeasureIds}};
+  \code{\link{getBMRMeasures}};
   \code{\link{getBMRPerformances}};
   \code{\link{getBMRPredictions}};
   \code{\link{getBMRTuneResults}}
