@@ -6,6 +6,7 @@ mlr_2.5:
 
 - new functions
 -- convertMLBenchObjToTask
+-- getBMRLearners, getBMRMeasures, getBMRMeasureIds
 
 mlr_2.4:
 - WrappedModel printer was slightly improved
